infra/istio/external-service/https-based/method-1/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: external-service-demo-dr
spec:
  host: "httpbin.org"
  trafficPolicy:
    tls:
      mode: SIMPLE
