infra/istio/external-service/https-based/method-1/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-service-demo-vs
spec:
  hosts:
  - "*"
  gateways:
  - external-service-demo-gwr
  http:
  - match:
    - uri:
        regex: ".*"
    route:
    - destination:
        host: httpbin.org
        port:
          number: 443
